(chore) link to instructions

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <option>#000000</option>
       <option>#ffffff</option>
     </datalist>
+    <p>
+      <a href="https://en.wikipedia.org/wiki/Mastermind_(board_game)">How to play</a>
+    </p>
     <p id="status">
       Guesses remaining: <span id="count" data-count="12">12</span>
     </p>
