(feat) generate .guess rows

--- a/index.html
+++ b/index.html
@@ -25,24 +25,18 @@
         <th></th>
         <th></th>
       </tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
+      <tr class="guess">
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td class="response"></td>
+      </tr>
       <tr id="guess">
         <td><input type="color" list="colors" value="#ffffff"></td>
         <td><input type="color" list="colors" value="#ffffff"></td>
         <td><input type="color" list="colors" value="#ffffff"></td>
         <td><input type="color" list="colors" value="#ffffff"></td>
-        <td></td>
       </tr>
     </table>
     <button type="submit" onclick="guess()">Guess</button>
