(style) peg-style colors

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     </p>
     <table>
       <tr id="solution">
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
+        <th><div class="color"></div></th>
+        <th><div class="color"></div></th>
+        <th><div class="color"></div></th>
+        <th><div class="color"></div></th>
       </tr>
       <tr class="guess">
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td><div class="color"></div></td>
+        <td><div class="color"></div></td>
+        <td><div class="color"></div></td>
+        <td><div class="color"></div></td>
         <td class="response"></td>
       </tr>
       <tr id="guess">
